Fix scrollbars AGAIN and contact page changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -402,3 +402,28 @@ select, option {
     border-bottom-right-radius: 1rem;
   }
 }
+
+/* Scrollbar for Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #555 #1a1a1a;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #1a1a1a;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 10px;
+  border: 2px solid #1a1a1a;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
